--- a/app/src/main/res/layout/form_conf_duel.xml
+++ b/app/src/main/res/layout/form_conf_duel.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
-            android:popupBackground="@android:drawable/btn_dropdown" />
+            android:popupBackground="@drawable/common_google_signin_btn_icon_light_normal_background" />
 
     </LinearLayout>
 
