--- a/app/src/main/res/layout/form_deck_builder.xml
+++ b/app/src/main/res/layout/form_deck_builder.xml
@@ -8,145 +8,214 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/textView2"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/title_deckbuilder"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:layout_weight="0.3">
 
-    <LinearLayout
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_deckbuilder"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="27dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_weight="0.3">
 
-        <TextView
-            android:id="@+id/textView13"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_image_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_nom_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_niv_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="TextView" />
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_atk_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            <Spinner
+                android:id="@+id/id_choice_sort_list_card"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:background="@android:drawable/btn_dropdown"
+                android:entries="@array/array_sort" />
 
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_def_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_add"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
-    </LinearLayout>
+    </RelativeLayout>
 
-    <ListView
-        android:id="@+id/lv_cards"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:background="#4B457CA3" />
+        android:layout_height="match_parent"
+        android:layout_weight="0.2">
 
-    <LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="27dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_image_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_nom_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_niv_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_atk_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_def_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_add"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/lv_cards"
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:background="#4B457CA3" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="29dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_weight="0.2">
 
-        <TextView
-            android:id="@+id/textView14"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
-            android:layout_weight="1"
-            android:text="@string/tv_image_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_nom_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="29dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_duplicat_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="1dp"
+                    android:layout_weight="1"
+                    android:text="@string/tv_image_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
-        <TextView
-            android:id="@+id/textView17"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_atk_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_nom_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_def_carte"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_duplicat_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
-        <TextView
-            android:id="@+id/textView19"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_del"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_atk_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
-    <ListView
-        android:id="@+id/lv_deckCards"
+                <TextView
+                    android:id="@+id/textView18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_def_carte"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tv_del"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/lv_deckCards"
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:background="#4B457CA3">
+
+            </ListView>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:background="#4B457CA3">
+        android:layout_height="match_parent"
+        android:layout_weight="0.3">
 
-    </ListView>
+        <Button
+            android:id="@+id/bt_retour_deckBuilder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="onClickRetour"
+            android:text="@string/bt_return" />
 
-    <Button
-        android:id="@+id/bt_retour_deckBuilder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onClickRetour"
-        android:text="@string/bt_return" />
-
+    </RelativeLayout>
 
 </LinearLayout>
